--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,15 +11,15 @@
 	<header>
 		<h2><a href="#">Website Logo</a></h2>
 		<nav>
-			<li><a href="">Home</a></li>
-			<li><a href="">Products</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Contacts</a></li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#product">Products</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#contact">Contacts</a></li>
 		</nav>
 	</header>
 
 
-	<section class="hero">
+	<section class="hero" id="home">
 		<div class="background-image1" ></div>
 		<h1>Responsive Flexbox Template</h1>
 		<h3>A freebie by Tutorialzine.</h3>
@@ -27,7 +27,7 @@
 	</section>
 
 
-	<section class="our-work">
+	<section class="our-work" id="product">
 		<h3 class="title">Some of our work</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
 		<hr>
@@ -41,7 +41,7 @@
 	</section>
 	
 
-	<section class="features">
+	<section class="features" id="about">
 		<h3 class="title">Features and services</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
 		<hr>
@@ -69,7 +69,7 @@
 	
 
 
-	<section class="contact">
+	<section class="contact" id="contact">
 		<h3 class="title">Join our newsletter</h3>	
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices. Morbi vitae pulvinar velit. Sed aliquam dictum sapien, id sagittis augue malesuada eu.</p>
 		<hr>
